all issue resolved in local

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT=8000
 MONGODB_URL="mongodb+srv://vinayydv2003_db_user:vinayydv@cluster0.vpyrw1c.mongodb.net/"
 JWT_SECRET="NJFINSBJO4J9S"
-NODE_ENVIRONMENT="production"
+# NODE_ENVIRONMENT="production"
 CLOUDINARY_CLOUD_NAME="dhnkpg71k"
 CLOUDINARY_API_KEY="822345241285549"    
 CLOUDINARY_API_SECRET="I5J2Q42xRyZ6AhInXXznZhasTpM"
